...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s"
                android:hint="@string/label_quantity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/quantity_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/quantity_accepted_characters"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />
...
